# multiemu-c99

./: CMakeLists.txt  LICENSE  README.md  compile-tcc.bat  create-build.bat
src/: main.c
src/features/: gen_avsmp.c  gen_avsmp.h  gen_oldrevemu.c  gen_oldrevemu.h  gen_revemu.c  gen_revemu.h  gen_revemu2013.c  gen_revemu2013.h  gen_sc2009.c  gen_sc2009.h  gen_setti.c  gen_setti.h  gen_steamemu.c  gen_steamemu.h
src/impl/: emu_impl.c  emu_impl.h
src/utils/: rev_data.c  rev_data.h  rev_spoofer.c  rev_spoofer.h  sse_hash.c  sse_hash.h
